added square & circle figures

--- a/paint.html
+++ b/paint.html
@@ -15,6 +15,9 @@
         <label for="square">
             <input id="square" type="radio" name="tool" value="square">Square
         </label>
+        <label for="circle">
+            <input id="circle" type="radio" name="tool" value="circle">Circle
+        </label>
     </div>
     <button id="undo" type="button" onclick="undo()" disabled>Undo</button>
     <button id="redo" type="button" onclick="redo()" disabled>Redo</button>
